add feature getMyInfo and updateMyInfo
